crates/strider-analyze/tests/snapshots/ppc32be__calling_convention__forward_4.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x10000514:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x10020000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "1" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "9" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "9" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "9" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "9" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "10" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "16" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "20" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" -> "24" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "25" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "23" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="arg[3] ← r6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="arg[2] ← r5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "29" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x10020020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "31" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "29" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x10020020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "33" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" -> "31" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x10020020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "35" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" -> "33" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x10020020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "37" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v38" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v38" -> "35" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "7" -> "35" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "37" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "39" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v40" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v40" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "6" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "39" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "41" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v42" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v42" -> "39" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "5" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "43" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v44" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v44" -> "41" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "41" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "45" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v46" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v46" -> "43" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "47" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "47" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "45" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "48" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v49" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v49" -> "45" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "50" -> "45" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "50" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "48" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "51" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v52" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v52" -> "48" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "17" -> "48" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
